--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,22 @@
 </head>
 <body>
 <script>
+
+const pressed = [];
+const secretCode = 'wesbos'
+  window.addEventListener("keyup", (e) => {
+
+    pressed.push(e.key);
+
+    pressed.splice(-secretCode.length - 1, pressed.length - secretCode.length);
+    console.log(pressed);
+
+    if (pressed.join('').includes(secretCode)) {
+      console.log("ding ding ding you did it man!");
+      cornify_add();
+    }
+  });
+
 </script>
 </body>
 </html>
